# mine-autobackup

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  pages.yml
docs/: app.js  index.html  styles.css
scripts/: set-version.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
