[package]
name = "mine-autobackup"
version = "0.1.2"
description = "Windows tray app for Minecraft world backups"
authors = ["Vinicius"]
edition = "2021"

[lib]
name = "mine_autobackup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mine-autobackup"
path = "src/main.rs"

[build-dependencies]
dotenvy = "0.15.7"
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
base64 = "0.22.1"
keyring = "3.6.3"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tauri = { version = "2.9.1", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["sync", "time"] }
zip = "2.2.1"
